src/app/produkt/[id]/ProductCardWorksWith.module.scss
@use '@navikt/ds-tokens/dist/tokens' as *;

.container {
  position: relative;

  &:hover {
    outline: 1px solid $a-border-action;
  }
}

.imageWrapper {
  position: relative;
  width: 100px;
  height: 100px;
}

.productSummary {
  padding: $a-spacing-2 0 0 0;
}

.link {
  color: $a-text-default;
  text-decoration: underline;

  &:hover,
  &:focus {
    text-decoration: underline;
    color: $a-text-action;
    background-color: white;
  }

  &::after {
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    bottom: 1rem;
    left: 0;
    z-index: 1;
  }
}

.copyButton {
  position: relative;
  z-index: 2;
  border: 1px dashed #0056b4;
}

.textColumn {
  min-width: 0;
  flex: 1;
}

